# leaveproject

./: .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
leave/: admin.py  models.py  serializers.py  tests.py  views.py
leave/migrations/: 0001_initial.py  0002_auto_20200913_1538.py
leaveproject/: asgi.py  settings.py  urls.py  wsgi.py
leaveproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
