[tool.poetry]
name = "leaveproject"
version = "0.1.0"
description = "Test project to demonstrate abilities"
authors = ["Michael Frohlich <mike.frohl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
